resources/mmalpha/mmalphaV2-1-0_binary/sources/Write_Alpha/y.output
State 53 conflicts: 1 reduce/reduce
State 68 conflicts: 1 shift/reduce
State 171 conflicts: 1 shift/reduce
State 240 conflicts: 1 shift/reduce
State 324 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Top $end

    1 ID_item: ID

    2 ID_item_List: ID_item
    3             | ID_item_List ',' ID_item
    4             | /* empty */

    5 Number_item: NUMBER

    6 Number_item_List: Number_item
    7                 | Number_item_List ',' Number_item
    8                 | /* empty */

    9 Top: '{' System_List '}'
   10    | System
   11    | Exp
   12    | KW_dtable '[' '{' Dep_List '}' ']'
   13    | KW_dtable '[' '{' Decl_List '}' ',' '{' Dep_List '}' ']'
   14    | Domain
   15    | Matrix
   16    | Equation
   17    | IO_Decl
   18    | Decl

   19 System_List: System
   20            | System_List ',' System

   21 System: KW_system '[' System_Head ',' System_Body ']'

   22 System_Head: ID_item ',' Parameter ',' IO_Decl ',' IO_Decl

   23 IO_Decl: '{' Decl_List '}'
   24        | '{' '}'

   25 Parameter: Domain

   26 System_Body: Local_Decl ',' Enable_array_notation Let_Equations Disable_array_notation
   27            | Local_Decl ','

   28 Local_Decl: '{' Decl_List '}'
   29           | '{' '}'

   30 Let_Equations: '{' Equation_List '}'
   31              | KW_let '[' '{' Equation_List '}' ']'
   32              | KW_let '[' Equation_List ']'
   33              | '{' '}'
   34              | KW_let '[' '{' '}' ']'
   35              | KW_let '[' ']'

   36 Decl: KW_decl '[' ID_item ',' Type ']'
   37     | KW_decl '[' ID_item ',' KW_notype ',' Domain ']'
   38     | KW_decl '[' ID_item ',' ID_item ',' Data_Type ',' Domain ']'

   39 Decl_List: Decl
   40          | Decl_List ',' Decl

   41 Type: Data_Type ',' KW_scalar
   42     | Data_Type ',' Domain

   43 Data_Type: KW_integer '[' ID_item ',' NUMBER ']'
   44          | KW_boolean '[' ID_item ',' NUMBER ']'
   45          | KW_real '[' ID_item ',' NUMBER ']'
   46          | KW_integer
   47          | KW_boolean
   48          | KW_real
   49          | KW_invar
   50          | KW_outvar
   51          | KW_locvar
   52          | KW_usevar

   53 Equation_List: Equation
   54              | Equation_List ',' Equation

   55 @1: /* empty */

   56 Equation: KW_equation '[' ID_item @1 ',' Exp ']'
   57         | KW_equation '[' KW_affine '[' ID_item ',' Matrix ']' ',' Exp ']'

   58 @2: /* empty */

   59 Equation: KW_restrict '[' Domain @2 ',' Equation ']'

   60 @3: /* empty */

   61 Equation: KW_loop '[' Domain @3 ',' Equation ']'
   62         | Let_Equations

   63 @4: /* empty */

   64 @5: /* empty */

   65 @6: /* empty */

   66 @7: /* empty */

   67 Equation: KW_use '[' ID_item ',' Domain @4 ',' @5 Matrix @6 ',' Disable_array_notation '{' Exp_List '}' @7 ',' '{' ID_item_List '}' ']'

   68 Dep_List: Dep
   69         | Dep_List ',' Dep
   70         | /* empty */

   71 DepVar: ID_item ',' ID_item ',' '{' Number_item_List '}' ',' Matrix

   72 @8: /* empty */

   73 @9: /* empty */

   74 Dep: KW_depend '[' Domain ',' ID_item ',' ID_item ',' @8 Matrix @9 ',' Domain ']'

   75 @10: /* empty */

   76 Dep: KW_dependence '[' KW_gt ',' Domain ',' @10 DepVar ',' DepVar ']'

   77 @11: /* empty */

   78 Dep: KW_dependence '[' KW_ge ',' Domain ',' @11 DepVar ',' DepVar ']'

   79 @12: /* empty */

   80 Dep: KW_dependence '[' KW_eq ',' Domain ',' @12 DepVar ',' DepVar ']'

   81 Exp_List: Exp
   82         | Exp_List ',' Exp
   83         | /* empty */

   84 Exp: KW_restrict '[' Domain ',' Exp ']'
   85    | KW_case '[' '{' Exp_List '}' ']'
   86    | KW_var '[' ID_item ']'

   87 @13: /* empty */

   88 Exp: KW_affine '[' Disable_array_notation Exp @13 ',' Matrix ']'

   89 @14: /* empty */

   90 Exp: KW_affine '[' Disable_array_notation KW_const '[' Const ']' @14 ',' Matrix ']'
   91    | KW_const '[' Const ']'
   92    | KW_index '[' KW_matrix '[' NUMBER ',' NUMBER ',' '{' ID_List '}' ',' '{' Number_List_List '}' ']' ']'
   93    | KW_call '[' ID_item ',' '{' Exp_List '}' ']'
   94    | KW_binop '[' KW_add ',' Exp ',' Exp ']'
   95    | KW_binop '[' KW_mul ',' Exp ',' Exp ']'
   96    | KW_binop '[' KW_and ',' Exp ',' Exp ']'
   97    | KW_binop '[' KW_min ',' Exp ',' Exp ']'
   98    | KW_binop '[' KW_max ',' Exp ',' Exp ']'
   99    | KW_binop '[' KW_xor ',' Exp ',' Exp ']'
  100    | KW_binop '[' KW_or ',' Exp ',' Exp ']'
  101    | KW_binop '[' KW_sub ',' Exp ',' Exp ']'
  102    | KW_binop '[' KW_div ',' Exp ',' Exp ']'
  103    | KW_binop '[' KW_idiv ',' Exp ',' Exp ']'
  104    | KW_binop '[' KW_mod ',' Exp ',' Exp ']'
  105    | KW_binop '[' KW_eq ',' Exp ',' Exp ']'
  106    | KW_binop '[' KW_le ',' Exp ',' Exp ']'
  107    | KW_binop '[' KW_lt ',' Exp ',' Exp ']'
  108    | KW_binop '[' KW_gt ',' Exp ',' Exp ']'
  109    | KW_binop '[' KW_ge ',' Exp ',' Exp ']'
  110    | KW_binop '[' KW_ne ',' Exp ',' Exp ']'
  111    | KW_unop '[' KW_neg ',' Exp ']'
  112    | KW_unop '[' KW_not ',' Exp ']'
  113    | KW_unop '[' KW_sqrt ',' Exp ']'
  114    | KW_unop '[' KW_abs ',' Exp ']'
  115    | KW_if '[' Exp ',' Exp ',' Exp ']'

  116 @15: /* empty */

  117 Exp: KW_reduce '[' Casop ',' Disable_array_notation Matrix ',' Enable_array_notation @15 Exp ']'

  118 Casop: KW_add
  119      | KW_mul
  120      | KW_and
  121      | KW_or
  122      | KW_xor
  123      | KW_min
  124      | KW_max

  125 Disable_array_notation: /* empty */

  126 Enable_array_notation: /* empty */

  127 Const: NUMBER
  128      | BOOLEAN
  129      | REAL

  130 Domain: KW_domain '[' Dom_ID_List ',' Dom_Union ']'

  131 Dom_ID_List: NUMBER ',' '{' ID_List '}'
  132            | NUMBER ',' '{' '}'

  133 Dom_Union: '{' Pol_List '}'
  134          | '{' ZPol_List '}'

  135 ID_List: ID
  136        | ID_List ',' ID

  137 ZPol_List: ZPol
  138          | ZPol_List ',' ZPol

  139 @16: /* empty */

  140 @17: /* empty */

  141 ZPol: KW_zpol '[' @16 Matrix @17 ',' '{' Pol_List '}' ']'

  142 Pol_List: Pol
  143         | Pol_List ',' Pol

  144 Pol: KW_pol '[' NUMBER ',' NUMBER ',' NUMBER ',' NUMBER ',' '{' Number_List_List '}' ',' '{' Number_List_List '}' ']'

  145 Matrix: KW_matrix '[' NUMBER ',' NUMBER ',' '{' ID_List '}' ',' '{' Number_List_List '}' ']'
  146       | KW_matrix '[' NUMBER ',' NUMBER ',' '{' '}' ',' '{' Number_List_List '}' ']'

  147 Number_List: NUMBER
  148            | Number_List ',' NUMBER
  149            | /* empty */

  150 Number_List_List: '{' Number_List '}'
  151                 | Number_List_List ',' '{' Number_List '}'
  152                 | /* empty */


Terminals, with rules where they appear

$end (0) 0
',' (44) 3 7 13 20 21 22 26 27 36 37 38 40 41 42 43 44 45 54 56 57
    59 61 67 69 71 74 76 78 80 82 84 88 90 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
    117 130 131 132 136 138 141 143 144 145 146 148 151
'[' (91) 12 13 21 31 32 34 35 36 37 38 43 44 45 56 57 59 61 67 74 76
    78 80 84 85 86 88 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105 106 107 108 109 110 111 112 113 114 115 117 130 141 144
    145 146
']' (93) 12 13 21 31 32 34 35 36 37 38 43 44 45 56 57 59 61 67 74 76
    78 80 84 85 86 88 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105 106 107 108 109 110 111 112 113 114 115 117 130 141 144
    145 146
'{' (123) 9 12 13 23 24 28 29 30 31 33 34 67 71 85 92 93 131 132 133
    134 141 144 145 146 150 151
'}' (125) 9 12 13 23 24 28 29 30 31 33 34 67 71 85 92 93 131 132 133
    134 141 144 145 146 150 151
error (256)
KW_system (258) 21
KW_decl (259) 36 37 38
KW_scalar (260) 41
KW_integer (261) 43 46
KW_boolean (262) 44 47
KW_real (263) 45 48
KW_equation (264) 56 57
KW_case (265) 85
KW_restrict (266) 59 84
KW_var (267) 86
KW_affine (268) 57 88 90
KW_const (269) 90 91
KW_index (270) 92
KW_binop (271) 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110
KW_unop (272) 111 112 113 114
KW_if (273) 115
KW_add (274) 94 118
KW_sub (275) 101
KW_mul (276) 95 119
KW_div (277) 102
KW_idiv (278) 103
KW_mod (279) 104
KW_eq (280) 80 105
KW_le (281) 106
KW_lt (282) 107
KW_gt (283) 76 108
KW_ge (284) 78 109
KW_ne (285) 110
KW_or (286) 100 121
KW_and (287) 96 120
KW_neg (288) 111
KW_not (289) 112
KW_xor (290) 99 122
KW_min (291) 97 123
KW_max (292) 98 124
KW_sqrt (293) 113
KW_abs (294) 114
KW_domain (295) 130
KW_pol (296) 144
KW_zpol (297) 141
KW_matrix (298) 92 145 146
KW_notype (299) 37
KW_invar (300) 49
KW_outvar (301) 50
KW_locvar (302) 51
KW_usevar (303) 52
KW_reduce (304) 117
KW_depend (305) 74
KW_dependence (306) 76 78 80
KW_dtable (307) 12 13
KW_let (308) 31 32 34 35
KW_loop (309) 61
KW_call (310) 93
KW_use (311) 67
NUMBER (312) 5 43 44 45 92 127 131 132 144 145 146 147 148
REAL (313) 129
BOOLEAN (314) 128
ID (315) 1 135 136


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
ID_item (67)
    on left: 1, on right: 2 3 22 36 37 38 43 44 45 56 57 67 71 74 86
    93
ID_item_List (68)
    on left: 2 3 4, on right: 3 67
Number_item (69)
    on left: 5, on right: 6 7
Number_item_List (70)
    on left: 6 7 8, on right: 7 71
Top (71)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 0
System_List (72)
    on left: 19 20, on right: 9 20
System (73)
    on left: 21, on right: 10 19 20
System_Head (74)
    on left: 22, on right: 21
IO_Decl (75)
    on left: 23 24, on right: 17 22
Parameter (76)
    on left: 25, on right: 22
System_Body (77)
    on left: 26 27, on right: 21
Local_Decl (78)
    on left: 28 29, on right: 26 27
Let_Equations (79)
    on left: 30 31 32 33 34 35, on right: 26 62
Decl (80)
    on left: 36 37 38, on right: 18 39 40
Decl_List (81)
    on left: 39 40, on right: 13 23 28 40
Type (82)
    on left: 41 42, on right: 36
Data_Type (83)
    on left: 43 44 45 46 47 48 49 50 51 52, on right: 38 41 42
Equation_List (84)
    on left: 53 54, on right: 30 31 32 54
Equation (85)
    on left: 56 57 59 61 62 67, on right: 16 53 54 59 61
@1 (86)
    on left: 55, on right: 56
@2 (87)
    on left: 58, on right: 59
@3 (88)
    on left: 60, on right: 61
@4 (89)
    on left: 63, on right: 67
@5 (90)
    on left: 64, on right: 67
@6 (91)
    on left: 65, on right: 67
@7 (92)
    on left: 66, on right: 67
Dep_List (93)
    on left: 68 69 70, on right: 12 13 69
DepVar (94)
    on left: 71, on right: 76 78 80
Dep (95)
    on left: 74 76 78 80, on right: 68 69
@8 (96)
    on left: 72, on right: 74
@9 (97)
    on left: 73, on right: 74
@10 (98)
    on left: 75, on right: 76
@11 (99)
    on left: 77, on right: 78
@12 (100)
    on left: 79, on right: 80
Exp_List (101)
    on left: 81 82 83, on right: 67 82 85 93
Exp (102)
    on left: 84 85 86 88 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 110 111 112 113 114 115 117,
    on right: 11 56 57 81 82 84 88 94 95 96 97 98 99 100 101 102 103
    104 105 106 107 108 109 110 111 112 113 114 115 117
@13 (103)
    on left: 87, on right: 88
@14 (104)
    on left: 89, on right: 90
@15 (105)
    on left: 116, on right: 117
Casop (106)
    on left: 118 119 120 121 122 123 124, on right: 117
Disable_array_notation (107)
    on left: 125, on right: 26 67 88 90 117
Enable_array_notation (108)
    on left: 126, on right: 26 117
Const (109)
    on left: 127 128 129, on right: 90 91
Domain (110)
    on left: 130, on right: 14 25 37 38 42 59 61 67 74 76 78 80 84
Dom_ID_List (111)
    on left: 131 132, on right: 130
Dom_Union (112)
    on left: 133 134, on right: 130
ID_List (113)
    on left: 135 136, on right: 92 131 136 145
ZPol_List (114)
    on left: 137 138, on right: 134 138
ZPol (115)
    on left: 141, on right: 137 138
@16 (116)
    on left: 139, on right: 141
@17 (117)
    on left: 140, on right: 141
Pol_List (118)
    on left: 142 143, on right: 133 141 143
Pol (119)
    on left: 144, on right: 142 143
Matrix (120)
    on left: 145 146, on right: 15 57 67 71 74 88 90 117 141
Number_List (121)
    on left: 147 148 149, on right: 148 150 151
Number_List_List (122)
    on left: 150 151 152, on right: 92 144 145 146 151


state 0

    0 $accept: . Top $end

    KW_system    shift, and go to state 1
    KW_decl      shift, and go to state 2
    KW_equation  shift, and go to state 3
    KW_case      shift, and go to state 4
    KW_restrict  shift, and go to state 5
    KW_var       shift, and go to state 6
    KW_affine    shift, and go to state 7
    KW_const     shift, and go to state 8
    KW_index     shift, and go to state 9
    KW_binop     shift, and go to state 10
    KW_unop      shift, and go to state 11
    KW_if        shift, and go to state 12
    KW_domain    shift, and go to state 13
    KW_matrix    shift, and go to state 14
    KW_reduce    shift, and go to state 15
    KW_dtable    shift, and go to state 16
    KW_let       shift, and go to state 17
    KW_loop      shift, and go to state 18
    KW_call      shift, and go to state 19
    KW_use       shift, and go to state 20
    '{'          shift, and go to state 21

    Top            go to state 22
    System         go to state 23
    IO_Decl        go to state 24
    Let_Equations  go to state 25
    Decl           go to state 26
    Equation       go to state 27
    Exp            go to state 28
    Domain         go to state 29
    Matrix         go to state 30


state 1

   21 System: KW_system . '[' System_Head ',' System_Body ']'

    '['  shift, and go to state 31


state 2

   36 Decl: KW_decl . '[' ID_item ',' Type ']'
   37     | KW_decl . '[' ID_item ',' KW_notype ',' Domain ']'
   38     | KW_decl . '[' ID_item ',' ID_item ',' Data_Type ',' Domain ']'

    '['  shift, and go to state 32


state 3

   56 Equation: KW_equation . '[' ID_item @1 ',' Exp ']'
   57         | KW_equation . '[' KW_affine '[' ID_item ',' Matrix ']' ',' Exp ']'

    '['  shift, and go to state 33


state 4

   85 Exp: KW_case . '[' '{' Exp_List '}' ']'

    '['  shift, and go to state 34


state 5

   59 Equation: KW_restrict . '[' Domain @2 ',' Equation ']'
   84 Exp: KW_restrict . '[' Domain ',' Exp ']'

    '['  shift, and go to state 35


state 6

   86 Exp: KW_var . '[' ID_item ']'

    '['  shift, and go to state 36


state 7

   88 Exp: KW_affine . '[' Disable_array_notation Exp @13 ',' Matrix ']'
   90    | KW_affine . '[' Disable_array_notation KW_const '[' Const ']' @14 ',' Matrix ']'

    '['  shift, and go to state 37


state 8

   91 Exp: KW_const . '[' Const ']'

    '['  shift, and go to state 38


state 9

   92 Exp: KW_index . '[' KW_matrix '[' NUMBER ',' NUMBER ',' '{' ID_List '}' ',' '{' Number_List_List '}' ']' ']'

    '['  shift, and go to state 39


state 10

   94 Exp: KW_binop . '[' KW_add ',' Exp ',' Exp ']'
   95    | KW_binop . '[' KW_mul ',' Exp ',' Exp ']'
   96    | KW_binop . '[' KW_and ',' Exp ',' Exp ']'
   97    | KW_binop . '[' KW_min ',' Exp ',' Exp ']'
   98    | KW_binop . '[' KW_max ',' Exp ',' Exp ']'
   99    | KW_binop . '[' KW_xor ',' Exp ',' Exp ']'
  100    | KW_binop . '[' KW_or ',' Exp ',' Exp ']'
  101    | KW_binop . '[' KW_sub ',' Exp ',' Exp ']'
  102    | KW_binop . '[' KW_div ',' Exp ',' Exp ']'
  103    | KW_binop . '[' KW_idiv ',' Exp ',' Exp ']'
  104    | KW_binop . '[' KW_mod ',' Exp ',' Exp ']'
  105    | KW_binop . '[' KW_eq ',' Exp ',' Exp ']'
  106    | KW_binop . '[' KW_le ',' Exp ',' Exp ']'
  107    | KW_binop . '[' KW_lt ',' Exp ',' Exp ']'
  108    | KW_binop . '[' KW_gt ',' Exp ',' Exp ']'
  109    | KW_binop . '[' KW_ge ',' Exp ',' Exp ']'
  110    | KW_binop . '[' KW_ne ',' Exp ',' Exp ']'

    '['  shift, and go to state 40


state 11

  111 Exp: KW_unop . '[' KW_neg ',' Exp ']'
  112    | KW_unop . '[' KW_not ',' Exp ']'
  113    | KW_unop . '[' KW_sqrt ',' Exp ']'
  114    | KW_unop . '[' KW_abs ',' Exp ']'

    '['  shift, and go to state 41


state 12

  115 Exp: KW_if . '[' Exp ',' Exp ',' Exp ']'

    '['  shift, and go to state 42


state 13

  130 Domain: KW_domain . '[' Dom_ID_List ',' Dom_Union ']'

    '['  shift, and go to state 43


state 14

  145 Matrix: KW_matrix . '[' NUMBER ',' NUMBER ',' '{' ID_List '}' ',' '{' Number_List_List '}' ']'
  146       | KW_matrix . '[' NUMBER ',' NUMBER ',' '{' '}' ',' '{' Number_List_List '}' ']'

    '['  shift, and go to state 44


state 15

  117 Exp: KW_reduce . '[' Casop ',' Disable_array_notation Matrix ',' Enable_array_notation @15 Exp ']'

    '['  shift, and go to state 45


state 16

   12 Top: KW_dtable . '[' '{' Dep_List '}' ']'
   13    | KW_dtable . '[' '{' Decl_List '}' ',' '{' Dep_List '}' ']'

    '['  shift, and go to state 46


state 17

   31 Let_Equations: KW_let . '[' '{' Equation_List '}' ']'
   32              | KW_let . '[' Equation_List ']'
   34              | KW_let . '[' '{' '}' ']'
   35              | KW_let . '[' ']'

    '['  shift, and go to state 47


state 18

   61 Equation: KW_loop . '[' Domain @3 ',' Equation ']'

    '['  shift, and go to state 48


state 19

   93 Exp: KW_call . '[' ID_item ',' '{' Exp_List '}' ']'

    '['  shift, and go to state 49


state 20

   67 Equation: KW_use . '[' ID_item ',' Domain @4 ',' @5 Matrix @6 ',' Disable_array_notation '{' Exp_List '}' @7 ',' '{' ID_item_List '}' ']'

    '['  shift, and go to state 50


state 21

    9 Top: '{' . System_List '}'
   23 IO_Decl: '{' . Decl_List '}'
   24        | '{' . '}'
   30 Let_Equations: '{' . Equation_List '}'
   33              | '{' . '}'

    KW_system    shift, and go to state 1
    KW_decl      shift, and go to state 2
    KW_equation  shift, and go to state 3
    KW_restrict  shift, and go to state 51
    KW_let       shift, and go to state 17
    KW_loop      shift, and go to state 18
    KW_use       shift, and go to state 20
    '{'          shift, and go to state 52
    '}'          shift, and go to state 53

    System_List    go to state 54
    System         go to state 55
    Let_Equations  go to state 25
    Decl           go to state 56
    Decl_List      go to state 57
    Equation_List  go to state 58
    Equation       go to state 59


state 22

    0 $accept: Top . $end

    $end  shift, and go to state 60


state 23

   10 Top: System .

    $default  reduce using rule 10 (Top)


state 24

   17 Top: IO_Decl .

    $default  reduce using rule 17 (Top)


state 25

   62 Equation: Let_Equations .

    $default  reduce using rule 62 (Equation)


state 26

   18 Top: Decl .

    $default  reduce using rule 18 (Top)


state 27

   16 Top: Equation .

    $default  reduce using rule 16 (Top)


state 28

   11 Top: Exp .

    $default  reduce using rule 11 (Top)


state 29

   14 Top: Domain .

    $default  reduce using rule 14 (Top)


state 30

   15 Top: Matrix .

    $default  reduce using rule 15 (Top)


state 31

   21 System: KW_system '[' . System_Head ',' System_Body ']'

    ID  shift, and go to state 61

    ID_item      go to state 62
    System_Head  go to state 63


state 32

   36 Decl: KW_decl '[' . ID_item ',' Type ']'
   37     | KW_decl '[' . ID_item ',' KW_notype ',' Domain ']'
   38     | KW_decl '[' . ID_item ',' ID_item ',' Data_Type ',' Domain ']'

    ID  shift, and go to state 61

    ID_item  go to state 64


state 33

   56 Equation: KW_equation '[' . ID_item @1 ',' Exp ']'
   57         | KW_equation '[' . KW_affine '[' ID_item ',' Matrix ']' ',' Exp ']'

    KW_affine  shift, and go to state 65
    ID         shift, and go to state 61

    ID_item  go to state 66


state 34

   85 Exp: KW_case '[' . '{' Exp_List '}' ']'

    '{'  shift, and go to state 67


state 35

   59 Equation: KW_restrict '[' . Domain @2 ',' Equation ']'
   84 Exp: KW_restrict '[' . Domain ',' Exp ']'

    KW_domain  shift, and go to state 13

    Domain  go to state 68


state 36

   86 Exp: KW_var '[' . ID_item ']'

    ID  shift, and go to state 61

    ID_item  go to state 69


state 37

   88 Exp: KW_affine '[' . Disable_array_notation Exp @13 ',' Matrix ']'
   90    | KW_affine '[' . Disable_array_notation KW_const '[' Const ']' @14 ',' Matrix ']'

    $default  reduce using rule 125 (Disable_array_notation)

    Disable_array_notation  go to state 70


state 38

   91 Exp: KW_const '[' . Const ']'

    NUMBER   shift, and go to state 71
    REAL     shift, and go to state 72
    BOOLEAN  shift, and go to state 73

    Const  go to state 74


state 39

   92 Exp: KW_index '[' . KW_matrix '[' NUMBER ',' NUMBER ',' '{' ID_List '}' ',' '{' Number_List_List '}' ']' ']'

    KW_matrix  shift, and go to state 75


state 40

   94 Exp: KW_binop '[' . KW_add ',' Exp ',' Exp ']'
   95    | KW_binop '[' . KW_mul ',' Exp ',' Exp ']'
   96    | KW_binop '[' . KW_and ',' Exp ',' Exp ']'
   97    | KW_binop '[' . KW_min ',' Exp ',' Exp ']'
   98    | KW_binop '[' . KW_max ',' Exp ',' Exp ']'
   99    | KW_binop '[' . KW_xor ',' Exp ',' Exp ']'
  100    | KW_binop '[' . KW_or ',' Exp ',' Exp ']'
  101    | KW_binop '[' . KW_sub ',' Exp ',' Exp ']'
  102    | KW_binop '[' . KW_div ',' Exp ',' Exp ']'
  103    | KW_binop '[' . KW_idiv ',' Exp ',' Exp ']'
  104    | KW_binop '[' . KW_mod ',' Exp ',' Exp ']'
  105    | KW_binop '[' . KW_eq ',' Exp ',' Exp ']'
  106    | KW_binop '[' . KW_le ',' Exp ',' Exp ']'
  107    | KW_binop '[' . KW_lt ',' Exp ',' Exp ']'
  108    | KW_binop '[' . KW_gt ',' Exp ',' Exp ']'
  109    | KW_binop '[' . KW_ge ',' Exp ',' Exp ']'
  110    | KW_binop '[' . KW_ne ',' Exp ',' Exp ']'

    KW_add   shift, and go to state 76
    KW_sub   shift, and go to state 77
    KW_mul   shift, and go to state 78
    KW_div   shift, and go to state 79
    KW_idiv  shift, and go to state 80
    KW_mod   shift, and go to state 81
    KW_eq    shift, and go to state 82
    KW_le    shift, and go to state 83
    KW_lt    shift, and go to state 84
    KW_gt    shift, and go to state 85
    KW_ge    shift, and go to state 86
    KW_ne    shift, and go to state 87
    KW_or    shift, and go to state 88
    KW_and   shift, and go to state 89
    KW_xor   shift, and go to state 90
    KW_min   shift, and go to state 91
    KW_max   shift, and go to state 92


state 41

  111 Exp: KW_unop '[' . KW_neg ',' Exp ']'
  112    | KW_unop '[' . KW_not ',' Exp ']'
  113    | KW_unop '[' . KW_sqrt ',' Exp ']'
  114    | KW_unop '[' . KW_abs ',' Exp ']'

    KW_neg   shift, and go to state 93
    KW_not   shift, and go to state 94
    KW_sqrt  shift, and go to state 95
    KW_abs   shift, and go to state 96


state 42

  115 Exp: KW_if '[' . Exp ',' Exp ',' Exp ']'

    KW_case      shift, and go to state 4
    KW_restrict  shift, and go to state 97
    KW_var       shift, and go to state 6
    KW_affine    shift, and go to state 7
    KW_const     shift, and go to state 8
    KW_index     shift, and go to state 9
    KW_binop     shift, and go to state 10
    KW_unop      shift, and go to state 11
    KW_if        shift, and go to state 12
    KW_reduce    shift, and go to state 15
    KW_call      shift, and go to state 19

    Exp  go to state 98


state 43

  130 Domain: KW_domain '[' . Dom_ID_List ',' Dom_Union ']'

    NUMBER  shift, and go to state 99

    Dom_ID_List  go to state 100


state 44

  145 Matrix: KW_matrix '[' . NUMBER ',' NUMBER ',' '{' ID_List '}' ',' '{' Number_List_List '}' ']'
  146       | KW_matrix '[' . NUMBER ',' NUMBER ',' '{' '}' ',' '{' Number_List_List '}' ']'

    NUMBER  shift, and go to state 101


state 45

  117 Exp: KW_reduce '[' . Casop ',' Disable_array_notation Matrix ',' Enable_array_notation @15 Exp ']'

    KW_add  shift, and go to state 102
    KW_mul  shift, and go to state 103
    KW_or   shift, and go to state 104
    KW_and  shift, and go to state 105
    KW_xor  shift, and go to state 106
    KW_min  shift, and go to state 107
    KW_max  shift, and go to state 108

    Casop  go to state 109


state 46

   12 Top: KW_dtable '[' . '{' Dep_List '}' ']'
   13    | KW_dtable '[' . '{' Decl_List '}' ',' '{' Dep_List '}' ']'

    '{'  shift, and go to state 110


state 47

   31 Let_Equations: KW_let '[' . '{' Equation_List '}' ']'
   32              | KW_let '[' . Equation_List ']'
   34              | KW_let '[' . '{' '}' ']'
   35              | KW_let '[' . ']'

    KW_equation  shift, and go to state 3
    KW_restrict  shift, and go to state 51
    KW_let       shift, and go to state 17
    KW_loop      shift, and go to state 18
    KW_use       shift, and go to state 20
    '{'          shift, and go to state 111
    ']'          shift, and go to state 112

    Let_Equations  go to state 25
    Equation_List  go to state 113
    Equation       go to state 59


state 48

   61 Equation: KW_loop '[' . Domain @3 ',' Equation ']'

    KW_domain  shift, and go to state 13

    Domain  go to state 114


state 49

   93 Exp: KW_call '[' . ID_item ',' '{' Exp_List '}' ']'

    ID  shift, and go to state 61

    ID_item  go to state 115


state 50

   67 Equation: KW_use '[' . ID_item ',' Domain @4 ',' @5 Matrix @6 ',' Disable_array_notation '{' Exp_List '}' @7 ',' '{' ID_item_List '}' ']'

    ID  shift, and go to state 61

    ID_item  go to state 116


state 51

   59 Equation: KW_restrict . '[' Domain @2 ',' Equation ']'

    '['  shift, and go to state 117


state 52

   30 Let_Equations: '{' . Equation_List '}'
   33              | '{' . '}'

    KW_equation  shift, and go to state 3
    KW_restrict  shift, and go to state 51
    KW_let       shift, and go to state 17
    KW_loop      shift, and go to state 18
    KW_use       shift, and go to state 20
    '{'          shift, and go to state 52
    '}'          shift, and go to state 118

    Let_Equations  go to state 25
    Equation_List  go to state 58
    Equation       go to state 59


state 53

   24 IO_Decl: '{' '}' .
   33 Let_Equations: '{' '}' .

    $end      reduce using rule 24 (IO_Decl)
    $end      [reduce using rule 33 (Let_Equations)]
    $default  reduce using rule 24 (IO_Decl)


state 54

    9 Top: '{' System_List . '}'
   20 System_List: System_List . ',' System

    ','  shift, and go to state 119
    '}'  shift, and go to state 120


state 55

   19 System_List: System .

    $default  reduce using rule 19 (System_List)


state 56

   39 Decl_List: Decl .

    $default  reduce using rule 39 (Decl_List)


state 57

   23 IO_Decl: '{' Decl_List . '}'
   40 Decl_List: Decl_List . ',' Decl

    ','  shift, and go to state 121
    '}'  shift, and go to state 122


state 58

   30 Let_Equations: '{' Equation_List . '}'
   54 Equation_List: Equation_List . ',' Equation

    ','  shift, and go to state 123
    '}'  shift, and go to state 124


state 59

   53 Equation_List: Equation .

    $default  reduce using rule 53 (Equation_List)


state 60

    0 $accept: Top $end .

    $default  accept


state 61

    1 ID_item: ID .

    $default  reduce using rule 1 (ID_item)


state 62

   22 System_Head: ID_item . ',' Parameter ',' IO_Decl ',' IO_Decl

    ','  shift, and go to state 125


state 63

   21 System: KW_system '[' System_Head . ',' System_Body ']'

    ','  shift, and go to state 126


state 64

   36 Decl: KW_decl '[' ID_item . ',' Type ']'
   37     | KW_decl '[' ID_item . ',' KW_notype ',' Domain ']'
   38     | KW_decl '[' ID_item . ',' ID_item ',' Data_Type ',' Domain ']'

    ','  shift, and go to state 127


state 65

   57 Equation: KW_equation '[' KW_affine . '[' ID_item ',' Matrix ']' ',' Exp ']'

    '['  shift, and go to state 128


state 66

   56 Equation: KW_equation '[' ID_item . @1 ',' Exp ']'

    $default  reduce using rule 55 (@1)

    @1  go to state 129


state 67

   85 Exp: KW_case '[' '{' . Exp_List '}' ']'

    KW_case      shift, and go to state 4
    KW_restrict  shift, and go to state 97
    KW_var       shift, and go to state 6
    KW_affine    shift, and go to state 7
    KW_const     shift, and go to state 8
    KW_index     shift, and go to state 9
    KW_binop     shift, and go to state 10
    KW_unop      shift, and go to state 11
    KW_if        shift, and go to state 12
    KW_reduce    shift, and go to state 15
    KW_call      shift, and go to state 19

    $default  reduce using rule 83 (Exp_List)

    Exp_List  go to state 130
    Exp       go to state 131


state 68

   59 Equation: KW_restrict '[' Domain . @2 ',' Equation ']'
   84 Exp: KW_restrict '[' Domain . ',' Exp ']'

    ','  shift, and go to state 132

    ','  [reduce using rule 58 (@2)]

    @2  go to state 133


state 69

   86 Exp: KW_var '[' ID_item . ']'

    ']'  shift, and go to state 134


state 70

   88 Exp: KW_affine '[' Disable_array_notation . Exp @13 ',' Matrix ']'
   90    | KW_affine '[' Disable_array_notation . KW_const '[' Const ']' @14 ',' Matrix ']'

    KW_case      shift, and go to state 4
    KW_restrict  shift, and go to state 97
    KW_var       shift, and go to state 6
    KW_affine    shift, and go to state 7
    KW_const     shift, and go to state 135
    KW_index     shift, and go to state 9
    KW_binop     shift, and go to state 10
    KW_unop      shift, and go to state 11
    KW_if        shift, and go to state 12
    KW_reduce    shift, and go to state 15
    KW_call      shift, and go to state 19

    Exp  go to state 136


state 71

  127 Const: NUMBER .

    $default  reduce using rule 127 (Const)


state 72
